kubernetes/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
  namespace: project3
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /result(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result
            port:
              number: 80

      - path: /result/stylesheets(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result
            port:
              number: 80

      - path: /result/app.js
        pathType: Exact
        backend:
          service:
            name: result
            port:
              number: 80

      - path: /result/angular.min.js
        pathType: Exact
        backend:
          service:
            name: result
            port:
              number: 80

      - path: /result/socket.io.js
        pathType: Exact
        backend:
          service:
            name: result
            port:
              number: 80
